# http-range-client

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: test.yml
src/: buffered_range_client.rs  error.rs  http_client.rs  lib.rs  parquet.rs  polars.rs  range_client.rs  reqwest_client.rs  ureq_client.rs
tests/: http_client.rs
