[package]
name = "http-range-client"
version = "0.7.1"
edition = "2018"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
description = "HTTP client for HTTP Range requests with a buffer optimized for sequential requests."
homepage = "https://github.com/pka/http-range-client"
repository = "https://github.com/pka/http-range-client"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["http", "reader", "buffer"]

[features]
default = ["reqwest-async", "reqwest-sync"]
reqwest-async = ["reqwest"]
reqwest-sync = ["reqwest/blocking"]
ureq-sync = ["ureq"]
polars = ["ureq", "polars-io"]

[dependencies]
async-trait = "0.1.51"
byteorder = "1.4.2"
bytes = "1.0.1"
polars-io = { version = "0.32.1", features = ["parquet", "csv"], optional = true }
read-logger = "0.2.0"
reqwest = { version = "0.11.0", default-features = false, features = ["default-tls"], optional = true }
thiserror = "1.0"
ureq = { version = "2.7.1", optional = true }

[dev-dependencies]
env_logger = "0.10.0"
tokio = { version = "1.0.2", default-features = false, features = ["rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
all-features = true
