[package]
name = "http-range-client"
version = "0.8.0"
edition = "2018"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
description = "HTTP client for HTTP Range requests with a buffer optimized for sequential requests."
homepage = "https://github.com/pka/http-range-client"
repository = "https://github.com/pka/http-range-client"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["http", "reader", "buffer"]

[features]
default = ["reqwest-async", "reqwest-sync", "default-tls"]
reqwest-async = ["reqwest"]
reqwest-sync = ["reqwest/blocking"]
ureq-sync = ["ureq"]
default-tls = ["reqwest?/default-tls"]

[dependencies]
async-trait = "0.1.51"
byteorder = "1.4.2"
bytes = "1.0.1"
read-logger = "0.2.0"
reqwest = { version = "0.12.5", default-features = false, optional = true }
thiserror = "1.0"
ureq = { version = "2.7.1", optional = true }

[dev-dependencies]
env_logger = "0.11.5"
tokio = { version = "1.0.2", default-features = false, features = ["rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
all-features = true
